manifest/apps/infrastructure/notification-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-receiver
  namespace: apps
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
