manifest/apps/infrastructure/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: golang-route-service
spec:
  hosts:
    - "api.jdnielss.my.id"
  gateways:
    - istio-gateway
  http:
    - name: "golang-route-service"
      match:
        - uri:
            prefix: "/"
      rewrite:
        uri: "/api"
      route:
        - destination:
            host: golang-service.apps.svc.cluster.local
            port:
              number: 8080
